[package]
name = "sudoku_solver"
version = "0.0.1"
authors = ["Aaron Roney <twitchax>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
simple_logger = "1.6.0"
log = { version = "0.4.8", features = ["release_max_level_info"] }
tokio = { version = "0.2.21", features = ["full"] }
crossbeam = "0.7.3"
rayon = "1.3.1"
core_affinity = "0.5.10"
parking_lot = "0.11.0"