[package]
name = "sudoku_solver"
version = "0.0.1"
authors = ["Aaron Roney <twitchax>"]
edition = "2021"

[profile.release]
debug = true
#lto = true

[dependencies]
simple_logger = "1.6.0"
log = { version = "0.4.8", features = ["release_max_level_info"] }
crossbeam = "0.7.3"
core_affinity = "0.5.10"
once_cell = "1.4.1"
rayon = "1.5.1"
core_simd = { git = "https://github.com/rust-lang/portable-simd" }